fixed issue with too fast scrollin on large phones
When the mobile device is large, many projects fit on one page and the scroll
bar is very small. In this case the background images scroll too fast as
they depend on the size of the scrollbar. The fix is to have a larger spacer
at the end of large mobile phones in order to get a larger scrollbar.


Former-commit-id: 253d4d54ef81da419d84a1aa8ecd5b68a075ea13

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -236,12 +236,25 @@ article a {
 }
 
 .spacer {
-  height: 15rem;
+    height: 13rem;
+}
+/* .content-media-spacer { */
+/*     height: 13rem; */
+/*     background-color: orange; */
+/* } */
+@media only screen and (max-height: 736px) {
+    .content-media-spacer {
+        height: 30rem;
+    }
+}
+@media only screen and (max-height: 667px) {
+    .content-media-spacer {
+        height: 20rem;
+    }
 }
 
-.content-media-spacer {
-  height: 12rem;
-}
+
+
 
 ul.tags {
   font-size: 0;
